python-rest-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-rest-api
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  selector:
    app: python-rest-api
  type: ClusterIP
